tests/integration/restricted/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sourcegraph-ingress
  namespace: ns-sourcegraph
spec:
  backend:
    serviceName: sourcegraph
    servicePort: 3080
