tests/integration/restricted/nonroot-policy.yaml
apiVersion: policy/v1
kind: PodSecurityPolicy
metadata:
  name: nonroot-policy
spec:
  privileged: false
  allowPrivilegeEscalation: false
  # The rest fills in some required fields.
  seLinux:
    rule: RunAsAny
  supplementalGroups:
    rule: 'MustRunAs'
    ranges:
      # Forbid adding the root group.
      - min: 1
        max: 65535
  runAsUser:
    rule: 'MustRunAsNonRoot'
  fsGroup:
    rule: 'MustRunAs'
    ranges:
      # Forbid adding the root group.
      - min: 1
        max: 65535
  volumes:
    - '*'
  readOnlyRootFilesystem: true
